--- a/assets/styles/accueil.scss
+++ b/assets/styles/accueil.scss
@@ -1,5 +1,6 @@
 ---
 ---
+
 @import 'responsive';
 
 .chapeau {
@@ -20,6 +21,19 @@
   p {
     margin: 0;
   }
+}
 
+.services-dispos {
+  padding: 40px 16px;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
 
+  h1 {
+    margin: 0;
+    padding: 0;
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+    text-align: center;
+  }
 }
