--- a/assets/styles/service.scss
+++ b/assets/styles/service.scss
@@ -254,7 +254,7 @@ h2 {
   flex-wrap: wrap;
 }
 
-.carte {
+.carte.lien {
   display: flex;
   width: 286px;
   flex-direction: column;
@@ -304,102 +304,6 @@ h2 {
   display: flex;
   flex-direction: column;
   margin-bottom: 32px;
-
-  .ressource {
-    border: 1px solid #ddd;
-    width: 288px;
-    border-radius: 8px;
-
-    @include a-partir-de(md) {
-      width: 320px;
-    }
-
-    figure {
-      display: flex;
-      position: relative;
-      padding: 20px 22px 0;
-      background: #f4f4f4;
-      margin: 0;
-      border-top-right-radius: 8px;
-      border-top-left-radius: 8px;
-
-      img {
-        width: 100%;
-      }
-
-      figcaption {
-        position: absolute;
-        display: flex;
-        align-items: center;
-        gap: 2px;
-        top: 16px;
-        right: 16px;
-        padding: 2px 8px;
-        line-height: 1.25rem;
-        font-size: 0.75rem;
-        background: #0d0c21;
-        color: white;
-        border-radius: 8px;
-
-        &:before {
-          content: '';
-          background-image: url("/assets/images/icone-ressource.svg");
-          width: 12px;
-          height: 12px;
-        }
-      }
-    }
-
-    .contenu {
-      border-bottom: 4px solid #0d0c21;
-      border-bottom-left-radius: 8px;
-      border-bottom-right-radius: 8px;
-      padding: 24px;
-      display: flex;
-      flex-direction: column;
-      gap: 12px;
-
-      h3 {
-        margin: 0;
-        padding: 0;
-        font-size: .875rem;
-        line-height: 1.5rem;
-        font-weight: 400;
-      }
-
-      span {
-        font-weight: bold;
-        font-size: 1.125rem;
-        line-height: 1.5rem;
-      }
-
-      a {
-        display: flex;
-        align-items: center;
-        gap: 3px;
-        text-decoration: none;
-        font-size: 0.875rem;
-        line-height: 1.5rem;
-        color: var(--noir);
-        font-weight: bold;
-
-        &:after {
-          content: '';
-          background: url("/assets/images/icone-lien-externe.svg");
-          width: 16px;
-          height: 16px;
-          margin-left: auto;
-        }
-      }
-
-      .labels {
-        span {
-          font-size: 0.75rem;
-          line-height: 1.25rem;
-        }
-      }
-    }
-  }
 }
 
 .labels {
