Affiche le pied de page par défaut

--- a/assets/styles/site.scss
+++ b/assets/styles/site.scss
@@ -233,3 +233,23 @@ header {
     }
   }
 }
+
+footer {
+  border-top: 2px solid var(--noir);
+  padding: 16px var(--gouttiere) 24px;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+
+  @include a-partir-de(md) {
+    flex-direction: row;
+    gap: 16px;
+  }
+
+  a {
+    text-decoration: none;
+    color: var(--noir);
+    font-size: .75rem;
+    line-height: 1.5rem;
+  }
+}
