Affiche l'icône seulement sur les liens explicitement externes

--- a/_layouts/service.html
+++ b/_layouts/service.html
@@ -92,7 +92,7 @@ script: /scripts/service.js
                 <div class="contenu">
                     <h3>{{ressource.titre}}</h3>
                     <span>{{ressource.description}}</span>
-                    <a href="{{ressource.lien}}">Découvrir le service
+                    <a class="lien-externe" href="{{ressource.lien}}">Découvrir le service
                         <img src="/assets/images/icone-fleche-droite.svg">
                     </a>
                     <div class="labels">
