Fais pointer le lien sur la page Catalogue

--- a/_layouts/service.html
+++ b/_layouts/service.html
@@ -8,7 +8,7 @@ script: /scripts/service.js
     <div class="fil-ariane">
         <a href="/">Accueil</a>
         <span><img src="/assets/images/icone-chevron-droite.svg"/> </span>
-        <a href="/services">Les services et ressources cyber</a>
+        <a href="/catalogue/">Les services et ressources cyber</a>
         <span><img src="/assets/images/icone-chevron-droite.svg"/></span>
         <span>{{page.nomDuService}}</span>
     </div>
