Place des espaces insécables devant les « ? »

--- a/_layouts/service.html
+++ b/_layouts/service.html
@@ -30,13 +30,13 @@ script: /scripts/service.js
         <details>
             <summary>
                 <img class="menu" src="/assets/images/icone-menu-lateral.svg"/>
-                <span id="section-active">De quoi s'agit-il ?</span>
+                <span id="section-active">De quoi s'agit-il&nbsp;?</span>
                 <img class="chevron" src="/assets/images/icone-chevron-bas.svg"/>
             </summary>
 
             <ul>
-                <li class="actif"><a href="#explication">De quoi s'agit-il ?</a></li>
-                <li><a href="#cible">Qui peut utiliser ce service ?</a></li>
+                <li class="actif"><a href="#explication">De quoi s'agit-il&nbsp;?</a></li>
+                <li><a href="#cible">Qui peut utiliser ce service&nbsp;?</a></li>
                 <li><a href="#ressources">Les ressources associées</a></li>
             </ul>
         </details>
@@ -45,8 +45,8 @@ script: /scripts/service.js
 
         <div class="sommaire sommaire-deplie">
             <ul>
-                <li class="actif"><a href="#explication">De quoi s'agit-il ?</a></li>
-                <li><a href="#cible">Qui peut utiliser ce service ?</a></li>
+                <li class="actif"><a href="#explication">De quoi s'agit-il&nbsp;?</a></li>
+                <li><a href="#cible">Qui peut utiliser ce service&nbsp;?</a></li>
                 <li><a href="#ressources">Les ressources associées</a></li>
             </ul>
             <span>TAGS</span>
@@ -60,13 +60,13 @@ script: /scripts/service.js
     <div class="contenu">
         <section class="explication" id="explication">
             <img src="/assets/images/illustrations-services/{{ page.illustration }}"/>
-            <h2>De quoi s'agit-il ?</h2>
+            <h2>De quoi s'agit-il&nbsp;?</h2>
             <span>{{ page.content }}</span>
             <a href="{{page.lienService}}" target="_blank" class="bouton primaire">Accéder au service</a>
         </section>
 
         <section class="cible" id="cible">
-            <h2>Qui peut utiliser ce service ?</h2>
+            <h2>Qui peut utiliser ce service&nbsp;?</h2>
             <span>{{ page.cibleService }}</span>
 
             <div class="cartes">
