Corrige la marge de droite sur le résumé
... en mode mobile

--- a/assets/styles/service.scss
+++ b/assets/styles/service.scss
@@ -29,7 +29,12 @@
   .resume {
     display: flex;
     justify-content: space-between;
+    flex-direction: column;
     gap: 24px;
+
+    @include a-partir-de(xxl) {
+      flex-direction: row;
+    }
 
     img {
       display: none;
