--- a/assets/styles/service.scss
+++ b/assets/styles/service.scss
@@ -47,6 +47,8 @@
 
   h1 {
     margin: 0 0 16px;
+    font-size: 2.5rem;
+    line-height: 2.875rem;
 
     @include a-partir-de(md) {
       font-size: 3.5rem;
