--- a/assets/styles/service.scss
+++ b/assets/styles/service.scss
@@ -15,6 +15,8 @@
     margin: 0;
     padding: 0;
     max-width: 650px;
+    font-size: 1.125rem;
+    line-height: 1.75rem;
 
     @include a-partir-de(md) {
       font-size: 1.375rem;
@@ -46,7 +48,7 @@
   }
 
   h1 {
-    margin: 0 0 16px;
+    margin: 8px 0 16px;
     font-size: 2.5rem;
     line-height: 2.875rem;
 
