Corrige l’interlignage de l’explication

--- a/_layouts/service.html
+++ b/_layouts/service.html
@@ -61,7 +61,7 @@ script: /scripts/service.js
         <section class="explication" id="explication">
             <img src="/assets/images/illustrations-services/{{ page.illustration }}"/>
             <h2>De quoi s'agit-il&nbsp;?</h2>
-            <span>{{ page.content }}</span>
+            <div>{{ page.content }}</div>
             <a href="{{page.lien}}" target="_blank" class="bouton primaire">Accéder au service</a>
         </section>
 
