--- a/assets/styles/service.scss
+++ b/assets/styles/service.scss
@@ -298,6 +298,7 @@ h2 {
     padding: 24px;
     flex-direction: column;
     gap: 12px;
+    flex: 1;
 
     &:after {
       content: '';
@@ -305,6 +306,7 @@ h2 {
       width: 16px;
       height: 16px;
       align-self: end;
+      margin-top: auto;
     }
   }
 }
