--- a/assets/styles/catalogue.scss
+++ b/assets/styles/catalogue.scss
@@ -65,8 +65,9 @@
 
 fieldset {
   margin: 0;
-  padding: 0;
+  padding: 0 0 32px;
   border: none;
+  border-bottom: 1px solid #D9DADB;
   display: flex;
   flex-direction: column;
   gap: 16px;
@@ -85,6 +86,18 @@ fieldset {
     display: flex;
     gap: 8px;
     align-items: center;
+
+    .libelle {
+      display: flex;
+      gap: 8px;
+      align-items: center;
+
+      img {
+        width: 20px;
+        height: 20px;
+        filter: brightness(0) saturate(100%);
+      }
+    }
 
     .compte {
       margin-left: auto;
@@ -110,11 +123,27 @@ fieldset {
           margin: auto;
           width: 6px;
           height: 12px;
-          border-right: 0.15em var(--noir) solid;
-          border-bottom: 0.15em var(--noir) solid;
+          border-right: 2px var(--noir) solid;
+          border-bottom: 2px var(--noir) solid;
           transform: translateY(2px) rotate(0.12turn);
         }
       }
+
+      &:indeterminate {
+        /* Ce style est prévu pour être cumulatif avec l'état coché */
+        &::before {
+          width: 9px;
+          height: 10px;
+          border-right: none;
+          transform: none;
+        }
+      }
     }
+  }
+
+  fieldset {
+    box-sizing: border-box;
+    padding: 0 0 0 16px;
+    border: none;
   }
 }
