--- a/assets/styles/site.scss
+++ b/assets/styles/site.scss
@@ -88,6 +88,7 @@ header {
 }
 
 .bouton {
+  font-family: 'Marianne';
   display: flex;
   justify-content: center;
   border-radius: 8px;
@@ -95,6 +96,10 @@ header {
   padding: 10px;
   text-decoration: none;
   font-weight: 500;
+  border: none;
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+  cursor: pointer;
 }
 
 .bouton.primaire {
