Ajoute le lien externe dans les cartes

--- a/_layouts/service.html
+++ b/_layouts/service.html
@@ -93,7 +93,7 @@ script: /scripts/service.js
                 <div class="contenu">
                     <h3>{{ressource.titre}}</h3>
                     <span>{{ressource.description}}</span>
-                    <a href="{{ressource.url}}">Découvrir le service
+                    <a href="{{ressource.url}}">En savoir plus
                         <img src="/assets/images/icone-fleche-droite.svg">
                     </a>
                     <div class="labels">
