--- a/assets/styles/site.scss
+++ b/assets/styles/site.scss
@@ -174,7 +174,7 @@ header {
       font-weight: 400;
     }
 
-    span {
+    .description {
       font-weight: bold;
       font-size: 1.125rem;
       line-height: 1.5rem;
