--- a/assets/styles/site.scss
+++ b/assets/styles/site.scss
@@ -116,22 +116,28 @@ header {
   border: 1px solid #ddd;
   width: 288px;
   border-radius: 8px;
+  display: flex;
+  flex-direction: column;
 
   @include a-partir-de(md) {
     width: 320px;
   }
 
   figure {
+    height: 157px;
     display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
     position: relative;
-    padding: 20px 22px 0;
     background: #f4f4f4;
     margin: 0;
     border-top-right-radius: 8px;
     border-top-left-radius: 8px;
 
     img {
-      width: 100%;
+      height: 131px;
+      width: 243px;
+      box-shadow: 0 4px 12px 0 rgba(0, 0, 18, 0.32);
     }
 
     figcaption {
@@ -158,6 +164,8 @@ header {
   }
 
   .contenu {
+    background: white;
+    z-index: 1;
     border-bottom: 4px solid black;
     border-bottom-left-radius: 8px;
     border-bottom-right-radius: 8px;
