Extrais un composant pour l’entête des filtres

--- a/_layouts/service.html
+++ b/_layouts/service.html
@@ -29,9 +29,11 @@ script: /scripts/service.js
     <div class="sommaire sommaire-replie">
         <details>
             <summary>
-                <img class="menu" src="/assets/images/icone-menu-lateral.svg"/>
-                <span id="section-active" class="titre-menu">De quoi s'agit-il&nbsp;?</span>
-                <img class="chevron" src="/assets/images/icone-chevron-bas.svg"/>
+                <div class="entete-filtres">
+                    <img class="menu" src="/assets/images/icone-menu-lateral.svg"/>
+                    <span id="section-active" class="titre-menu">De quoi s'agit-il&nbsp;?</span>
+                    <img class="chevron" src="/assets/images/icone-chevron-bas.svg"/>
+                </div>
             </summary>
 
             <ul>
